--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 apply plugin: 'com.android.application'
 //应用apt插件
 apply plugin: 'com.neenbedankt.android-apt'
+// add butterknife 插件
+apply plugin: 'com.jakewharton.butterknife'
 
 android {
     compileSdkVersion 26
@@ -26,6 +28,7 @@ dependencies {
     final RETROFIT_VERSION = '2.3.0'
     final AUTO_VALUE_VERSION = '1.3'
     final AUTO_VALUE_GSON_VERSION = '0.4.2'
+    final SUPPORT_LIBRARY_VERSION = '25.3.1'
 
 
     compile fileTree(dir: 'libs', include: ['*.jar'])
@@ -33,6 +36,7 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:26.+'
+    compile "com.android.support:recyclerview-v7:26.+"
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
 
@@ -49,6 +53,10 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     compile 'io.reactivex.rxjava2:rxjava:2.1.0'
+
+    compile 'com.jakewharton:butterknife:8.8.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+
 
 
     // https://github.com/google/auto/issues/268 与json相关的，先留着到时候看能不能删除
