--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,10 +22,6 @@ android {
 dependencies {
 
     final RETROFIT_VERSION = '2.3.0'
-    final AUTO_VALUE_VERSION = '1.3'
-    final AUTO_VALUE_GSON_VERSION = '0.4.2'
-    final SUPPORT_LIBRARY_VERSION = '25.3.1'
-
 
     compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
@@ -45,23 +41,15 @@ dependencies {
     compile 'com.jakewharton:butterknife:8.5.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
 
-
+    /**   retrofit2  **/
     compile "com.squareup.retrofit2:retrofit:$RETROFIT_VERSION"
     compile "com.squareup.retrofit2:converter-gson:$RETROFIT_VERSION"
     compile "com.squareup.retrofit2:adapter-rxjava2:$RETROFIT_VERSION"
 
-    compile 'com.github.bumptech.glide:glide:3.7.0'
+    /**   rxjava2  **/
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     compile 'io.reactivex.rxjava2:rxjava:2.1.0'
 
-
-    // https://github.com/google/auto/issues/268 与json相关的，先留着到时候看能不能删除
-    provided "com.jakewharton.auto.value:auto-value-annotations:$AUTO_VALUE_VERSION"
-    provided "com.ryanharter.auto.value:auto-value-gson:$AUTO_VALUE_GSON_VERSION"
-    annotationProcessor "com.google.auto.value:auto-value:$AUTO_VALUE_VERSION"
-    annotationProcessor 'com.ryanharter.auto.value:auto-value-parcel:0.2.4-rc2'
-    annotationProcessor "com.ryanharter.auto.value:auto-value-gson:$AUTO_VALUE_GSON_VERSION"
-    annotationProcessor 'com.squareup:javapoet:1.7.0'
-    // https://github.com/rharter/auto-value-parcel/issues/64
-
+    /**   glide  **/
+    compile 'com.github.bumptech.glide:glide:3.7.0'
 }
